--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         <div class="container mx-auto px-4 flex justify-between items-center">
             <div class="flex items-center">
                 <div id="logo-container" class="relative mr-4">
-                    <img id="logo-image" src="https://p3-flow-imagex-download-sign.byteimg.com/tos-cn-i-a9rns2rl98/dd1060c2aac8412bbc62eac6079bf7d1.png~tplv-a9rns2rl98-24:720:720.png?rcl=20251125145947ABD9A5E578EBFEDDB09F&rk3s=8e244e95&rrcfp=8a172a1a&x-expires=1764658787&x-signature=cYpnvn72GVW%2FlzPZ4Qxx4sEUgC8%3D" alt="Company Logo" class="h-10">
+                    <img id="logo-image" src="https://p26-flow-imagex-download-sign.byteimg.com/tos-cn-i-a9rns2rl98/0c831c3b86724ad3b14d9c4ce0241bc5.png~tplv-a9rns2rl98-24:720:720.png?rcl=2025112515212903E31001246C7F0A12C7&rk3s=8e244e95&rrcfp=8a172a1a&x-expires=1764660089&x-signature=yeUvgrP3KKCDRy%2FxJKYmZqxvqIk%3D" alt="Company Logo" class="h-10">
                     <span id="logo-text" class="text-2xl font-bold text-primary font-en hidden">Minze<span class="text-secondary">Cap</span></span>
                 </div>
             </div>
@@ -1443,7 +1443,7 @@ AI投資策略的優勢主要體現在以下幾個方面：<br><br>
             // 初始化Logo
             const logoImage = document.getElementById('logo-image');
             const logoText = document.getElementById('logo-text');
-            const defaultLogo = 'https://p26-flow-imagex-download-sign.byteimg.com/tos-cn-i-a9rns2rl98/5703944e40c5448b80e5ecc57059d3a7.png~tplv-a9rns2rl98-24:720:720.png?rcl=2025112123313327B8FB77EE7F97A5A6CB&rk3s=8e244e95&rrcfp=8a172a1a&x-expires=1764343893&x-signature=7czDziBOhzEpCAHgcIeOw5Eymj4%3D';
+            const defaultLogo = 'https://p26-flow-imagex-download-sign.byteimg.com/tos-cn-i-a9rns2rl98/0c831c3b86724ad3b14d9c4ce0241bc5.png~tplv-a9rns2rl98-24:720:720.png?rcl=2025112515212903E31001246C7F0A12C7&rk3s=8e244e95&rrcfp=8a172a1a&x-expires=1764660089&x-signature=yeUvgrP3KKCDRy%2FxJKYmZqxvqIk%3D';
             
             // 检查本地存储中是否有保存的logo
             const savedLogo = localStorage.getItem('companyLogo');
