Update logo image source in index.html

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         <div class="container mx-auto px-4 flex justify-between items-center">
             <div class="flex items-center">
                 <div id="logo-container" class="relative mr-4">
-                    <img id="logo-image" src="https://p26-flow-imagex-download-sign.byteimg.com/tos-cn-i-a9rns2rl98/0c831c3b86724ad3b14d9c4ce0241bc5.png~tplv-a9rns2rl98-24:720:720.png?rcl=2025112515212903E31001246C7F0A12C7&rk3s=8e244e95&rrcfp=8a172a1a&x-expires=1764660089&x-signature=yeUvgrP3KKCDRy%2FxJKYmZqxvqIk%3D" alt="Company Logo" class="h-10">
+                    <img id="logo-image" src="https://github.com/liu-deyang/mzci/blob/main/LOGO3.png" alt="Company Logo" class="h-10">
                     <span id="logo-text" class="text-2xl font-bold text-primary font-en hidden">Minze<span class="text-secondary">Cap</span></span>
                 </div>
             </div>
